--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
 
 //    classpath 'com.google.gms:google-services:3.1.0
     compile 'com.jjoe64:graphview:4.2.1' //graph view
+    compile 'com.github.anastr:speedviewlib:1.2.0' //gage chart
+
 
 
 }
